--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.3",
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
-    "express": "~4.12.2",
+    "express": "^4.12.3",
+    "express-session": "^1.11.2",
     "jade": "~1.9.2",
+    "mongoose": "^4.0.3",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.2.0",
+    "session": "^0.1.0"
   }
 }
